# Copaiba-NEO

./: Cargo.toml  README.md  changelog.md
.github/workflows/: bidu.yml  build.yml
src/: audio.rs  main.rs  oto.rs  plugins.rs  spectrogram.rs  waveform.rs
src/app/: audio_ops.rs  file_ops.rs  mod.rs  recorder.rs  selection.rs  state.rs  ui_header.rs  ui_menu.rs  ui_modals.rs  ui_recorder.rs  ui_status.rs  ui_table.rs  ui_tabs.rs  ui_tools.rs  ui_waveform.rs
src/assets/: en-US.egl  pt-BR.egl
