[package]
name = "copaiba_mini"
version = "0.1.0"
edition = "2021"
description = "Copaiba Mini — Lite oto.ini editor for UTAU/OpenUTAU"
license = "MIT"

[[bin]]
name = "copaiba_mini"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
egui_extras = "0.31"
hound = "3.5"
encoding_rs = "0.8"
rfd = "0.15"
rodio = "0.20"
rustfft = "6.4.1"
realfft = "3.5.0"
regex = "1.12.3"
egui_plot = "0.31"
cpal = "0.15"

[profile.release]
opt-level = 3
lto = true
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
